client/src/components/navigation/css/NavBar.css
.socials {
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: 3em;
    background-color:#2B2B2B;
}

.logo {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    height: 3em;
    margin-left: -17em;
    background-color: #2B2B2B;
}
.social-icon {
    width: 5em;
    height: 5em;
    color: white;
}


#switch_lang {
    background: goldenrod;
    padding: 0.5em 1em;
    border-radius: 0.5em;
    border: none;
    color: white;
    margin-left: 1em;
}
.nav-links {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: #2B2B2B;
    height: 2em;
    margin-top: 0;
}

ul {
    list-style-type: none;
}

